--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
         </div>
       </div>
     </header>
+
+    <section class="banner container">
+      <div class="banner-content">
+        <h1>Grow your
+          subscription
+          business</h1>
+        <p>Outcome-centered products that reduce churn, optimize pricing, and grow your subscription business end-to-end.</p>
+        <div class="banner-content__buttons">
+          <a href="" class="banner-content__btn">Get Started</a>
+          <a href="" class="banner-content__btn-svg">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 0.75V23.25" stroke="#19191B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M1.5 12.75L12 23.25L22.5 12.75" stroke="#19191B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>              
+          </a>
+        </div>
+      </div>
+      <div class="banner-image">
+        <img src="./assets/img/image/banner-image.svg" alt="">
+      </div>
+    </section>
   </div>
 
   <script>
