metrics and subscription full done

--- a/index.html
+++ b/index.html
@@ -37,19 +37,54 @@
         <h1>Grow your
           subscription
           business</h1>
-        <p>Outcome-centered products that reduce churn, optimize pricing, and grow your subscription business end-to-end.</p>
+        <p>Outcome-centered products that reduce churn, optimize pricing, and grow your subscription business
+          end-to-end.</p>
         <div class="banner-content__buttons">
           <a href="" class="banner-content__btn">Get Started</a>
           <a href="" class="banner-content__btn-svg">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 0.75V23.25" stroke="#19191B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M1.5 12.75L12 23.25L22.5 12.75" stroke="#19191B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>              
+              <path d="M12 0.75V23.25" stroke="#19191B" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M1.5 12.75L12 23.25L22.5 12.75" stroke="#19191B" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
           </a>
         </div>
       </div>
       <div class="banner-image">
         <img src="./assets/img/image/banner-image.svg" alt="">
+      </div>
+    </section>
+
+    <section class="collaborators container">
+      <img src="./assets/img/image/collaborator-1.svg" alt="collaborator">
+      <img src="./assets/img/image/collaborator-2.svg" alt="collaborator">
+      <img src="./assets/img/image/collaborator-3.svg" alt="collaborator">
+      <img src="./assets/img/image/collaborator-4.svg" alt="collaborator">
+      <img src="./assets/img/image/collaborator-5.svg" alt="collaborator">
+    </section>
+
+    <section class="subscription container">
+      <div class="subscription-content">
+        <h1>Subscription index</h1>
+        <p>A daily dataset to keep you up to date on subscription market trends and what's happening in your vertical.
+        </p>
+        <a href="">Learn more</a>
+      </div>
+      <div class="subscription-image">
+        <img src="./assets/img/image/subscription-image.svg" alt="">
+      </div>
+    </section>
+
+    <section class="metrics container">
+      <div class="metrics-content">
+        <h1>In-depth metrics</h1>
+        <p>Accurate, real-time reporting at your fingertips. Getting data has never been easier.
+        </p>
+        <a href="">Learn more</a>
+      </div>
+      <div class="metrics-image">
+        <img src="./assets/img/image/metrics-image.svg" alt="">
       </div>
     </section>
   </div>
