--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
         <img src="./assets/img/image/metrics-image.svg" alt="">
       </div>
     </section>
+
+    <section class="functions container">
+      <div class="function">
+        <img src="./assets/img/icons/benchmark.svg" alt="">
+        <h1>Benchmarks</h1>
+        <p>See how you stack up against comparable companies in similar stages.</p>
+      </div>
+      <div class="function">
+        <img src="./assets/img/icons/calculator.svg" alt="">
+        <h1>Pricing Audit</h1>
+        <p>Benchmark the health of your monetization and pricing strategy.</p>
+      </div>
+      <div class="function">
+        <img src="./assets/img/icons/camera.svg" alt="">
+        <h1>Retention Audit</h1>
+        <p>Audit where revenue leakage exists and where you can increase retention.</p>
+      </div>
+    </section>
   </div>
 
   <script>
