project full done

--- a/index.html
+++ b/index.html
@@ -105,6 +105,48 @@
         <p>Audit where revenue leakage exists and where you can increase retention.</p>
       </div>
     </section>
+
+    <section class="price container">
+      <div class="price-content">
+        <h1>Get the right plan for future product.</h1>
+        <div class="price-content__buttons">
+          <button>Yearly</button>
+          <button>Monthly</button>
+        </div>
+      </div>
+      <div class="price-cards">
+        <div class="price-card">
+          <span>Starter</span>
+          <h1>Free</h1>
+          <div class="price-card__info">
+            <span>1 Website</span>
+            <span>5 GB Hosting</span>
+            <span>Limited Support</span>
+          </div>
+          <a href="">Get Started</a>
+        </div>
+        <div class="price-card">
+          <span>Premium</span>
+          <h1>$29<span>/month</span></h1>
+          <div class="price-card__info">
+            <span>10 Website</span>
+            <span>15 GB Hosting</span>
+            <span>Premium Support</span>
+          </div>
+          <a href="">Get Started</a>
+        </div>
+        <div class="price-card">
+          <span>Enterprise</span>
+          <h1>$49<span>/month</span></h1>
+          <div class="price-card__info">
+            <span>Unlimited Website</span>
+            <span>50 GB Gosting</span>
+            <span>Premium Support</span>
+          </div>
+          <a href="">Get Started</a>
+        </div>
+      </div>
+    </section>
   </div>
 
   <script>
